--- a/src/components/SelectedRestaurant/styles.css
+++ b/src/components/SelectedRestaurant/styles.css
@@ -1,16 +1,20 @@
 .selectedRestaurant {
-  flex-grow: 8;
-  text-align: center;
-  border-left: solid 1px red;
+	flex-grow: 8;
+	text-align: center;
+	border-left: solid 1px red;
 }
 
 .selectedRestaurant img {
-  max-width: 50vw;
+	max-width: 50vw;
 }
 
 h3 {
-  font-size: 2rem;
-  text-transform: uppercase;
-  margin: 3%;
-  color: red;
+	font-size: 2rem;
+	text-transform: uppercase;
+	margin: 3%;
+	color: red;
+}
+
+.userInfo {
+	font-size: 2rem;
 }
